--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prisma": "^5.22.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "recharts": "^3.7.0",
     "resend": "^6.9.1",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0"
