--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@react-pdf/renderer": "^4.3.2",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^17.2.3",
     "iyzipay": "^2.0.64",
     "lucide-react": "^0.563.0",
@@ -25,6 +27,7 @@
     "next-auth": "^5.0.0-beta.30",
     "prisma": "^5.22.0",
     "react": "19.2.3",
+    "react-day-picker": "^8.10.1",
     "react-dom": "19.2.3",
     "recharts": "^3.7.0",
     "resend": "^6.9.1",
