--- a/package.json
+++ b/package.json
@@ -49,5 +49,10 @@
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react-day-picker": {
+      "react": "$react"
+    }
   }
 }
