--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "resend": "^6.9.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "use-debounce": "^10.1.0",
     "uuid": "^13.0.0",
     "zod": "^4.3.6"
   },
